[gd_scene load_steps=5 format=2]

[ext_resource path="res://motion_ai/common/tasking/core/TaskTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://motion_ai/common/tasking/actions/MoveToEntityDistance.tscn" type="PackedScene" id=2]
[ext_resource path="res://motion_ai/common/tasking/MeleeAttackTarget.gd" type="Script" id=3]
[ext_resource path="res://motion_ai/common/tasking/actions/TimeWait.tscn" type="PackedScene" id=4]

[node name="MeleeAttackTarget" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="MoveToEntityDistance" parent="." index="0" instance=ExtResource( 2 )]
target_distance = 0.5

[node name="TimeWaitWindup" parent="." index="1" instance=ExtResource( 4 )]
wait_time = 1.0

[node name="TimeWaitRecovery" parent="." index="2" instance=ExtResource( 4 )]
wait_time = 0.5

[connection signal="action_failure" from="MoveToEntityDistance" to="." method="_on_MoveToEntityDistance_action_failure"]
[connection signal="action_success" from="MoveToEntityDistance" to="." method="_on_MoveToEntityDistance_action_success"]
[connection signal="action_failure" from="TimeWaitWindup" to="." method="_on_TimeWaitWindup_action_failure"]
[connection signal="action_success" from="TimeWaitWindup" to="." method="_on_TimeWaitWindup_action_success"]
[connection signal="action_failure" from="TimeWaitRecovery" to="." method="_on_TimeWaitRecovery_action_failure"]
[connection signal="action_success" from="TimeWaitRecovery" to="." method="_on_TimeWaitRecovery_action_success"]
